made user live search functionality

--- a/app/views/follows/_form.html.erb
+++ b/app/views/follows/_form.html.erb
@@ -11,4 +11,4 @@
 <% end %>
 
 
-<button class="follow-toggle" type="button" name="button" data-user="<%= user.id %>", data-followState="<%= followed_state %>"></button>
+<button class="follow-toggle" type="button" name="button" data-user="<%= user.id %>", data-followstate="<%= followed_state %>"></button>
