--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,4 +1,12 @@
-<h1>Search!</h1>
+<nav class="users-search">
+    <input type="text" name="query" value="">
+    <ul class="users">
+    </ul>
+</nav>
+
+
+
+<!-- <h1>Search!</h1>
 
 <form action="/users/search" method="GET">
   <input
@@ -16,4 +24,4 @@
       <%= render "follows/form", user: user %>
     </li>
   <% end %>
-</ul>
+</ul> -->
